scripts/old firewall rules/iptables.conf
# Generated by iptables-save v1.8.4 on Tue Jul 14 12:51:36 2020
*filter
:INPUT DROP [70:4202]
:FORWARD DROP [0:0]
:OUTPUT DROP [73:3967]
-A INPUT -p tcp -m tcp --sport 443 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 443 -j ACCEPT
-A INPUT -s 91.189.95.83/32 -p tcp -m tcp --sport 80 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 1.1.1.1/32 -p tcp -m tcp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 1.0.0.1/32 -p tcp -m tcp --sport 53 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 1.1.1.1/32 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -s 1.0.0.1/32 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -s 192.168.10.75/32 -p tcp -m tcp --sport 22 -m mac --mac-source 18:3A:2D:F3:6C:06 -j ACCEPT
-A INPUT -s 192.168.10.75/32 -p tcp -m tcp --dport 22 -m mac --mac-source 18:3A:2D:F3:6C:06 -j ACCEPT
-A INPUT -s 192.168.10.66/32 -p tcp -m tcp --sport 22 -m mac --mac-source 28:E3:47:2C:86:A9 -j ACCEPT
-A INPUT -s 192.168.10.66/32 -p tcp -m tcp --dport 22 -m mac --mac-source 28:E3:47:2C:86:A9 -j ACCEPT
-A INPUT -s 192.168.10.75/32 -p tcp -m tcp --sport 1714:1764 -m mac --mac-source 18:3A:2D:F3:6C:06 -j ACCEPT
-A INPUT -s 192.168.10.75/32 -p tcp -m tcp --dport 1714:1764 -m mac --mac-source 18:3A:2D:F3:6C:06 -j ACCEPT
-A INPUT -s 192.168.10.75/32 -p udp -m udp --sport 1714:1764 -m mac --mac-source 18:3A:2D:F3:6C:06 -j ACCEPT
-A INPUT -s 192.168.10.75/32 -p udp -m udp --dport 1714:1764 -m mac --mac-source 18:3A:2D:F3:6C:06 -j ACCEPT
-A INPUT -s 192.168.10.66/32 -p tcp -m tcp --sport 1714:1764 -m mac --mac-source 28:E3:47:2C:86:A9 -j ACCEPT
-A INPUT -s 192.168.10.66/32 -p tcp -m tcp --dport 1714:1764 -m mac --mac-source 28:E3:47:2C:86:A9 -j ACCEPT
-A INPUT -s 192.168.10.66/32 -p udp -m udp --sport 1714:1764 -m mac --mac-source 28:E3:47:2C:86:A9 -j ACCEPT
-A INPUT -s 192.168.10.66/32 -p udp -m udp --dport 1714:1764 -m mac --mac-source 28:E3:47:2C:86:A9 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 443 -j ACCEPT
-A OUTPUT -d 91.189.95.83/32 -p tcp -m tcp --dport 80 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 1.1.1.1/32 -p tcp -m tcp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 1.0.0.1/32 -p tcp -m tcp --dport 53 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 1.1.1.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 1.0.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 192.168.10.75/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -d 192.168.10.75/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -d 192.168.10.66/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -d 192.168.10.66/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -d 192.168.10.75/32 -p tcp -m tcp --dport 1714:1764 -j ACCEPT
-A OUTPUT -d 192.168.10.75/32 -p tcp -m tcp --sport 1714:1764 -j ACCEPT
-A OUTPUT -d 192.168.10.75/32 -p udp -m udp --dport 1714:1764 -j ACCEPT
-A OUTPUT -d 192.168.10.75/32 -p udp -m udp --sport 1714:1764 -j ACCEPT
-A OUTPUT -d 192.168.10.66/32 -p tcp -m tcp --dport 1714:1764 -j ACCEPT
-A OUTPUT -d 192.168.10.66/32 -p tcp -m tcp --sport 1714:1764 -j ACCEPT
-A OUTPUT -d 192.168.10.66/32 -p udp -m udp --dport 1714:1764 -j ACCEPT
-A OUTPUT -d 192.168.10.66/32 -p udp -m udp --sport 1714:1764 -j ACCEPT
COMMIT
# Completed on Tue Jul 14 12:51:36 2020
